2008-06-02   Denis Leroy  <denis@poolshark.org>

	* clutter-cairo/cluttermm-cairo.pc.in:
	* clutter-gtk/cluttermm-gtk.pc.in: Use API_VER so the correct library 
	names are used.

0.5.1:

2008-05-06  Murray Cumming  <murrayc@murrayc.com>

	* clutter-cairo/Makefile.am:
	* clutter-gtk/Makefile.am:
	* clutter/Makefile.am: Added the generated .pc files to DISTCLEANFILES 
	to fix distcheck. 

2008-04-22  Jonathon Jongsma  <jjongsma@gnome.org>

	* clutter-cairo/cluttermm-cairo/private/Makefile.am:
	* clutter-gtk/cluttermm-gtk/private/Makefile.am:
	* tools/m4/Makefile.am: fix up a couple things that were missed from the API
	version rename

2008-04-22  Jonathon Jongsma  <jjongsma@gnome.org>

	* clutter-cairo/Makefile.am:
	* clutter-cairo/cluttermm-cairo/Makefile.am:
	* clutter-gtk/Makefile.am:
	* clutter-gtk/cluttermm-gtk/Makefile.am:
	* clutter/Makefile.am:
	* clutter/cluttermm.pc.in:
	* clutter/cluttermm/Makefile.am:
	* clutter/cluttermm/private/Makefile.am:
	* clutter/cluttermmconfig.h.in:
	* configure.in:
	* examples/Makefile.am_fragment: now change everything over to use the -0.6
	API version instead of -1.0.  The C Clutter library uses 0.6 for their API
	version and if cluttermm uses -1.0 now, we might run into trouble when
	clutterm reaches 1.0.  This should be ok yet since we don't have any real
	users or complete releases yet.

2008-04-22  Jonathon Jongsma  <jjongsma@gnome.org>

	* autogen.sh: abort if automake fails

2008-04-22  Siavash Safi  <siavash.safi@gmail.com>

	* Makefile.am:
	* clutter-gtk/Makefile.am:
	* clutter-gtk/README:
	* clutter-gtk/cluttermm-gtk-config.h.in:
	* clutter-gtk/cluttermm-gtk.h:
	* clutter-gtk/cluttermm-gtk.pc.in:
	* clutter-gtk/cluttermm-gtk/Makefile.am:
	* clutter-gtk/cluttermm-gtk/init.cc:
	* clutter-gtk/cluttermm-gtk/init.h:
	* clutter-gtk/cluttermm-gtk/private/Makefile.am:
	* clutter-gtk/cluttermm-gtk/wrap_init.h:
	* clutter-gtk/src/Makefile.am:
	* clutter-gtk/src/Makefile_list_of_hg.am_fragment: