@@ -1,7 +1,5 @@
 SUBDIRS = 
 
-#EXTRA_DIST	=  Makefile.am_fragment README.txt
-
 include Makefile.am_fragment
 
 noinst_PROGRAMS = actors flowers simple-cairo embed-gtk
@@ -10,3 +8,6 @@ flowers_SOURCES = flowers.cc
 simple_cairo_SOURCES = simple-cairo.cc
 embed_gtk_SOURCES = embed-gtk.cc
 #boxes_SOURCES = test-boxes.cc
+
+EXTRA_DIST = actor.png
+
